// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row Snap render Row props gutter 1`] = `
<div
  class="ob-row"
>
  
  <div
    class="ob-col ob-col--1"
    style="padding-right: 10px;"
  >
    
    column 1
    
  </div>
  <div
    class="ob-col ob-col--1"
  >
    
    column 2
    
  </div>
  
</div>
`;

exports[`Row Snap render Row with Col 1`] = `
<div
  class="ob-row"
>
  
  <div
    class="ob-col ob-col--1"
  >
    
    column 1
    
  </div>
  <div
    class="ob-col ob-col--1"
  >
    
    column 2
    
  </div>
  
</div>
`;

exports[`Row Snap render initial Row 1`] = `
<div
  class="ob-row"
>
  <!---->
</div>
`;
